hello/k8s/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-hello-app
spec:
  selector:
    matchLabels:
      app: go-hello-app
  template:
    metadata:
      labels:
        app: go-hello-app
    spec:
      containers:
      - name: go-hello-app
        image: muarwi/go-hello-app:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8900
        readinessProbe:
          httpGet:
            path: /health
            port: 8900
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8900
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 20
