hello/k8s/03_ingress_gke.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-hello-app-ingress
spec:
  defaultBackend:
    service:
      name: go-hello-app-service
      port:
        number: 8900
